tests/NormalTests/paczka1/fuzzy1/15811086.err
Error in line 10: NZO A342 99,0
Error in line 20: A342 S380 92,3
Error in line 16: v0RMa S380 48,8
Error in line 33: bDQC S380 81,1
Error in line 34: bDQC S760 70,3
